--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/store-devtools": "^6.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngrx-store-freeze": "^0.2.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
