--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@angular/pwa": "^0.8.3",
     "@angular/router": "~7.0.0",
     "@angular/service-worker": "~7.0.0",
-    "@ngrx/effects": "^6.1.0",
-    "@ngrx/store": "^6.1.0",
-    "@ngrx/store-devtools": "^6.1.0",
+    "@ngrx/effects": "^6.1.2",
+    "@ngrx/entity": "^6.1.2",
+    "@ngrx/store": "^6.1.2",
+    "@ngrx/store-devtools": "^6.1.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ngrx-store-freeze": "^0.2.4",
