--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/store-devtools": "^6.1.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "immutable": "4.0.0-rc.12",
     "ngrx-store-freeze": "^0.2.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
