--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hammerjs": "^2.0.8",
     "immutable": "4.0.0-rc.12",
     "ngrx-store-freeze": "^0.2.4",
+    "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
