--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ngrx-store-freeze": "^0.2.4",
     "ngx-infinite-scroll": "^6.0.1",
     "rxjs": "~6.3.3",
+    "webrtc-adapter": "^6.4.6",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
